--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body> 
   <canvas class="bounce" id="bridge" width="300" height="250"></canvas>
-  <img class="scratchEffect" src="img/Knife.png" id="tap"/>
+  <img class="scratchEffect" src="img/KnifeUpdated.png" id="tap"/>
   <div id="bridgeContainer" style="display: none;"></div>
   <script  src="./canvas.js"></script>
 </body>
